Updated footer and fixed "BuyAccount" whitespace when resizing

--- a/frontend/src/Styles/BuyAccount.css
+++ b/frontend/src/Styles/BuyAccount.css
@@ -1,8 +1,12 @@
+.wrapper{
+    overflow: hidden;
+}
 .upper-content{
     display: flex;
     flex-direction: row;
     padding-top: 20px;
 }
+
 
 .col-upper-content{
     display: flex;
